--- a/index.html
+++ b/index.html
@@ -7,6 +7,22 @@
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="stylesheet" href="build/css/style.min.css">
+       <!-- Smooth font loading -->
+        <script type="text/javascript">
+            !function(e,t,n,a,r,s,l,p){n&&(s=n[a],s&&(l=e.createElement("style"),l.innerHTML=s,e.getElementsByTagName("head")[0].appendChild(l)),p=t.setAttribute,t.setAttribute=function(e,l,u,i){"string"==typeof l&&l.indexOf(r)>-1&&(u=new XMLHttpRequest,u.open("GET",l,!0),u.onreadystatechange=function(){4===u.readyState&&(i=u.responseText.replace(/url\(\//g,"url("+r+"/"),i!==s&&(n[a]=i))},u.send(null),t.setAttribute=p,s)||p.apply(this,arguments)})}(document,Element.prototype,localStorage,"tk","https://use.typekit.net");
+        </script>
+        <script>
+            (function(d) {
+                var config = {
+                    kitId: 'mcc0qnk',
+                    scriptTimeout: 3000
+                },
+                h=d.documentElement, // ...
+            })(document);
+        </script>
+
+        <script src="https://use.typekit.net/mcc0qnk.js"></script>
+        <script>try{Typekit.load({ async: true });}catch(e){}</script>
 
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -17,9 +33,35 @@
         <!--[if lt IE 8]>
             <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="http://browsehappy.com/">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
+        <main>  
 
-        <p>Hello world! This is HTML5 Boilerplate.</p>
+          <h1 class="title">Bettermaps</h1>
 
+          <div class="sidebar">
+            <ul>
+              <li>Home</li>
+              <li>About</li>
+            </ul>
+          </div>
+
+          <div class="content">
+
+            <article> 
+              <a href="http://canoe.petesmaluck.com/"> 
+                <img alt="Killarney Canoe Route" src="http://canoe.petesmaluck.com/images/sc01522cf4.jpg">
+              </a>
+              <p><span class="article-title">Killarney Canoe Routes</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+              consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+              cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+              proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="http://canoe.petesmaluck.com/" target="_blank">
+                <div class="button">Link to Killarney Canoe Routes</div>
+              </a>
+            </article>
+          </div>
+        </main>
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
         <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
