--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
           <div class="sidebar">
             <ul>
-              <li>Home</li>
+              <li>Work</li>
               <li>About</li>
             </ul>
           </div>
