added second article

--- a/index.html
+++ b/index.html
@@ -63,12 +63,17 @@
             </article>
 
             <article> 
+              <a href="http://bettermaps.github.io/council/"> 
+                <img alt="Toronto City Council Map" src="http://i.imgur.com/wgpUg0S.png">
               </a>
+              <p><span class="article-title">Toronto City Council Map</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
               proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
               <p>Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+              <a href="http://bettermaps.github.io/council/" target="_blank">
+                <div class="button">Link to Toronto City Council Map</div>
               </a>
             </article>
           </div>
