--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </script>
 
         <script src="https://use.typekit.net/mcc0qnk.js"></script>
+        <script src="https://use.typekit.net/rox2xku.js"></script>
         <script>try{Typekit.load({ async: true });}catch(e){}</script>
+        
 
         <!--[if lt IE 9]>
             <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
