--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
               <a href="http://canoe.petesmaluck.com/"> 
                 <img alt="Killarney Canoe Route" src="http://canoe.petesmaluck.com/images/sc01522cf4.jpg">
               </a>
-              <p><span class="article-title">Killarney Canoe Routes</span>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+              <p><span class="article-title">Killarney Canoe Routes</span>Tom test ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
               quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
               consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
               cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
