--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
             <ul>
               <li>Work</li>
               <li>About</li>
+	      <li>Test</li>
             </ul>
           </div>
 
